tests/spec/emit/snapshots/interop_some_stores_result_fn_in_lowered_abi.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import ext "go:example.com/ext"
  
  fn configure(conf: Ref<ext.Config>) {
    let mut wrapped: Slice<Option<fn(ext.Config) -> Result<ext.Listener, error>>> = []
    for listener in ext.WrapListeners(conf.Listeners) {
      wrapped = wrapped.append(Some(listener))
    }
  }
---
package main

import (
	"example.com/ext"
	lisette "github.com/ivov/lisette/prelude"
)

func configure(conf *ext.Config) {
	wrapped := ([]lisette.Option[func(ext.Config) (ext.Listener, error)])(nil)
	for _, listener := range ext.WrapListeners(conf.Listeners) {
		wrapped = append(wrapped, lisette.MakeOptionSome(listener))
	}
}
