tests/spec/emit/snapshots/interop_struct_field_assign_array_option_pointer.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    let n = aws.Node { .. }
    let mut b = aws.Bucket { .. }
    b.Slots = [Some(&n), None]
    let _ = b
  }
---
package main

import (
	"example.com/aws"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	n := aws.Node{}
	b := aws.Bucket{}
	src := [2]lisette.Option[*aws.Node]{
		lisette.MakeOptionSome(&n),
		lisette.MakeOptionNone[*aws.Node](),
	}
	var unwrapped [2]*aws.Node
	for i, v := range src {
		if v.Tag == lisette.OptionSome {
			unwrapped[i] = v.SomeVal
		}
	}
	b.Slots = unwrapped
	_ = b
}
