tests/spec/emit/snapshots/interop_struct_field_assign_option_int32.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    let mut b = aws.ListInput { .. }
    b.MaxItems = Some(5)
    b.MaxItems = None
  }
---
package main

import "example.com/aws"

func main() {
	b := aws.ListInput{}
	var ptr int32 = 5
	b.MaxItems = &ptr
	b.MaxItems = nil
}
