tests/spec/emit/snapshots/interop_struct_field_assign_option_string.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    let mut b = aws.Bucket { .. }
    b.Name = Some("hi")
  }
---
package main

import "example.com/aws"

func main() {
	b := aws.Bucket{}
	var ptr string = "hi"
	b.Name = &ptr
}
