tests/spec/emit/snapshots/interop_struct_field_read_map_option_string_index.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    let b = aws.Bucket { .. }
    match b.Annotations["k"] {
      Some(v) => { let _ = v },
      None => {},
    }
  }
---
package main

import (
	"example.com/aws"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	b := aws.Bucket{Annotations: map[string]*string{}}
	raw := b.Annotations
	wrapped := make(map[string]lisette.Option[string], len(raw))
	for i, v := range raw {
		if v != nil {
			wrapped[i] = lisette.MakeOptionSome[string](*v)
		} else {
			wrapped[i] = lisette.MakeOptionNone[string]()
		}
	}
	subject := wrapped["k"]
	if subject.Tag == lisette.OptionSome {
		_ = subject.SomeVal
	}
}
