tests/spec/emit/snapshots/interop_struct_field_read_option_int32_let_binding.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    let input = aws.ListInput { .. }
    let n = input.MaxItems
    let _ = n
  }
---
package main

import (
	"example.com/aws"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	input := aws.ListInput{}
	raw := input.MaxItems
	n := lisette.OptionFromPointer[int32](raw)
	_ = n
}
