tests/spec/emit/snapshots/interop_struct_field_read_option_string_in_loop.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  import "go:fmt"
  
  fn main() {
    let buckets: Slice<aws.Bucket> = []
    for bucket in buckets {
      match bucket.Name {
        Some(name) => fmt.Println(name),
        None => {},
      }
    }
  }
---
package main

import (
	"example.com/aws"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	buckets := []aws.Bucket{}
	for _, bucket := range buckets {
		raw := bucket.Name
		option := lisette.OptionFromPointer[string](raw)
		if option.Tag == lisette.OptionSome {
			fmt.Println(option.SomeVal)
		}
	}
}
