tests/spec/emit/snapshots/interop_struct_field_read_option_string_match.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    let bucket = aws.Bucket { .. }
    match bucket.Name {
      Some(name) => { let _ = name },
      None => {},
    }
  }
---
package main

import (
	"example.com/aws"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	bucket := aws.Bucket{}
	raw := bucket.Name
	option := lisette.OptionFromPointer[string](raw)
	if option.Tag == lisette.OptionSome {
		_ = option.SomeVal
	}
}
