tests/spec/emit/snapshots/interop_struct_field_read_slice_option_string_iter.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    let b = aws.Bucket { .. }
    for tag in b.Tags {
      match tag {
        Some(v) => { let _ = v },
        None => {},
      }
    }
  }
---
package main

import (
	"example.com/aws"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	b := aws.Bucket{}
	raw := b.Tags
	wrapped := make([]lisette.Option[string], len(raw))
	for i, v_1 := range raw {
		if v_1 != nil {
			wrapped[i] = lisette.MakeOptionSome[string](*v_1)
		} else {
			wrapped[i] = lisette.MakeOptionNone[string]()
		}
	}
	for _, tag := range wrapped {
		if tag.Tag == lisette.OptionSome {
			_ = tag.SomeVal
		}
	}
}
