tests/spec/emit/snapshots/interop_struct_literal_option_none_to_pointer.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/cb"
  
  fn main() {
    let _ = cb.Options {
      Direction: None,
    }
  }
---
package main

import "example.com/cb"

func main() {
	_ = cb.Options{Direction: nil}
}
